--- a/CompilerDirectives/CompilerDirectives.iOS/CompilerDirectives.iOS.csproj
+++ b/CompilerDirectives/CompilerDirectives.iOS/CompilerDirectives.iOS.csproj
@@ -43,7 +43,7 @@
     <DebugType>portable</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\iPhone\Debug</OutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
+    <DefineConstants>DEBUG;__IOS__;__MOBILE__;__UNIFIED__;VERSION_TEST;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <MtouchArch>ARM64</MtouchArch>
